--- a/en/design-thinking/practica2.html
+++ b/en/design-thinking/practica2.html
@@ -22,21 +22,22 @@
 			<li><a href="../index.html">Home</a></li>
             <li><a href="../design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="practica1.html">Práctice 1</a></li>
-                    <li><a href="practica2.html">Practice 2</a></li>
-                    <li><a href="practica3.html">Practice 3</a></li>
-                    <li><a href="practica4.html">Practice 4</a></li>
-                    <li><a href="practica5.html">Practice 5</a></li>
+                    <li><a href="practica1.html">1. Approach of the design thinking project</a></li>
+                    <li><a href="practica2.html">2. Design thinking workshop</a></li>
+                    <li><a href="practica3.html">3. Empathize</a></li>
+                    <li><a href="practica4.html">4. Define</a></li>
+                    <li><a href="practica5.html">5. Idear</a></li>
+                    <li><a href="practica6.html">6. Prototype and testing</a></li>
                 </ul>
              </li>
-            <li><a href="../finalProject.html">Final Project</a>
+            <li><a href="../finalProject.html">Digital Manufacturing Project</a>
                 <ul>
-                    <li><a href="../final-project/semana1.html">Week 1</a></li>
-                    <li><a href="../final-project/semana2.html">Week 2</a></li>
-                    <li><a href="../final-project/semana3.html">Week 3</a></li>
-                    <li><a href="../final-project/semana4.html">Week 4</a></li>
-                    <li><a href="../final-project/semana5.html">Week 5</a></li>
-                    <li><a href="../final-project/semana6.html">Week 6</a></li>
+                    <li><a href="../final-project/semana1.html">1. Project management.</a></li>
+                    <li><a href="../final-project/semana2.html">2. Development of 2D and / or 3D plans.</a></li>
+                    <li><a href="../final-project/semana3.html">3. Execution of the final project.</a></li>
+                    <li><a href="../final-project/semana4.html">4. Presentation of the preliminary project.</a></li>
+                    <li><a href="../final-project/semana5.html">5. Development of the final presentation to the public.</a></li>
+                    <li><a href="../final-project/semana6.html">6. Preparation of Speech.</a></li>
                 </ul>
             </li>
 		</ul>
@@ -54,27 +55,60 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wsK_agXv-KM" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=iOiHvKFMPy8&feature=youtu.be" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Empathize and Define</p>
-                    <p class="think__details__info__cont">Then the problem "Failures in the cafeteria" was defined, we visualized all the faults that it presents when selling a product and when attending, to obtain concise data, we proceeded to develop a set of thirty questions to understand how you feel about the service of the coffee shops.</p>
+                    <p class="think__details__info__title">1. Develop each stage as a team.</p>
+                    <p class="think__details__info__cont"><p>The Design Thinking is the methodology that will be used throughout this project, this is presented as a tool to develop the innovation centered on the people, through the orderly and strategic follow-up of the steps of this useful tool you can observe the challenges , detect needs and, finally, solve them.</p>
+
+                    </p>
                 </div>
 
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Answers</p>
-                    <p>In the present document the total analysis of the problem is shown, based on the responses of the respondents.</p>
-                    <a href="https://drive.google.com/file/d/0B9nFLiw-DDCCbHJmMjVDSzluYVk/view" target="_blank" class="think__details__extra__description">Document - Answers</a>
+
+                </div>
+
+                <div class="think__details__info">
+                    <p class="think__details__info__title">2.   They know each of the stages of Design Thinking.</p>
+                    <p class="think__details__info__cont"><p>It consists of five stages or phases for the development of this investigation:
+
+                    <p>•   EMPATHING: The Design Thinking process begins with a deep understanding of the needs of society and the environment. You must be able to put yourself in the shoes of these people to be able to generate solutions consistent with their realities.
+                    <p>•   DEFINING: During the Definition stage, the information obtained in the previous stage must be analyzed and filtered with what really contributes value and what could lead to new interesting perspectives. Here the problem and possible solutions are identified.
+                    <p>•   IDEATION: This stage is aimed at the generation of ideas, for example: through brainstorming. You should avoid staying with the first idea that occurs. In this phase, activities favor expansive thinking and value judgments must be eliminated. Sometimes, the most unique ideas are those that could produce solutions with more vision.
+                    <p>•  PROTOTYPING: In the prototype stage, ideas become reality. Building the prototypes makes the ideas tangible and can lead to observe the most satisfactory possible results, highlighting elements that must be improved or refined before reaching the final solution. In our case, presenting a draft of an innovative proposal that allows generating the solution of a problem of our reality is enough.
+                    <p>•   TEST: During this stage he develops the idea idea until it becomes the result that was being sought, for this a presentation of our proposal is made and then the feasibility of said solution to the problem towards a sworn audience, such as a fair exhibition or a pilot project support.
+                </div>
+
+                <div class="think__details__info">
+                    <p class="think__details__info__title">3.  They develop Seed Material where they explain the methodology of Design Thinking.</p>
+                    <p class="think__details__info__cont"><p>
+                    <p>• The seed material for the project that is to be undertaken requires simple tools such as asking "How could we ...?" These are short questions that have the peculiarity of starting brainstorms. These questions arise from the definition of the problem or design principles as seeds for the ideas stage. Generates a seed large enough to have a large number of solutions and sufficiently limited or limited so that the team has certain limits that are helpful. For example, something too limited is "How could we create an ice cream cone without the ice cream dripping or dripping" and too broad is "How could we redesign the concept of dessert". A good approach may be "How could we redesign the ice cream cone to make it more transportable?" The first thing to do would be to define the problem and then observe aspects of the statement to complete the phrase "How could we ...?" Developing several alternatives, a posteriori. Then a kind of filter is made with another brainstorm to choose from the most relevant Finally, a single phrase should be chosen as a statement that graphs all the relevant aspects. Keep in mind that needs are verbs and insights are flashes of creativity. In itself what is sought with the seed material is to find the greatest number of causes to the problem so that it serves as a base in the next stages of Design Thinking, and this base is the one that must be taken down afterwards with the best possible solution.
+
+           
+                </div>
+
+                <div class="think__details__info">
+                    <p class="think__details__info__title">4.They develop the same workshop for their design thinking projects.</p>
+                    <p class="think__details__info__cont"><p>
+                    <p>•   In the case of the projects, those are being developed both in practice and in theory, both complement each other and the same stages of Design Thinking are being developed, that is, one could not skip any stage without culminating with the previous one, and this is how the approach is conserved throughout the development of both projects. This is a useful tool that inspires and can not only be used as a practice for a business, that will be part of a certain society or market niche, but can also be used as a practice for personal improvement, since the stages can be but under a more intimate approach.
+
+                    </div>     
+           
+                </div>
+                <!--div class="think__details__extra">
+                    <p class="think__details__extra__title">Respuestas</p>
+                    <p>En el presente documento se muestra el análisis total del problema, basándonos en las respuestas de los encuestados.</p>
+                    <a href="https://drive.google.com/file/d/1K4NFkj3El4lRBq5SVDEvw3mak2-1AWdu/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento - Respuestas</a>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas Encuesta</p>
-                    <p>In the present file shows in detail the results of the survey to the students, about the service of attention in both cafeterias.</p>
-                    <a href="https://drive.google.com/file/d/0B9nFLiw-DDCCdldBX3ZlbnNBOG8/view" target="_blank" class="think__details__extra__description">Document - survey answer</a>
-                </div>
+                    <p>En el presente archisvo muestra a detalle los resultados de la encuesta a los estudiantes, sobre el servicio de atención en ambas cafeterías.</p>
+                    <a href="https://drive.google.com/file/d/1PHGLUB1CPTJZH-x0X2J5i2ZnAt8MoD09/view?usp=sharing" target="_blank">Documento - Respuestas Encuesta</a>
+                </div!-->
+            </div>
             </div>
         </div>
     </div>
@@ -86,7 +120,7 @@
             </div>
             <div class="footer__copy">
                 <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2017 - Designed by: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                <p>&copy; 2018 - Designed by: <a href= a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe</a></p>
             </div>
         </div>
     </footer>
