--- a/en/design-thinking/thiking.html
+++ b/en/design-thinking/thiking.html
@@ -12,32 +12,22 @@
     <div class="nav-toggle" id="main-nav-toggle"><i class="icon-navicon"></i></div>
     <nav class="main-nav" id="main-nav">
         <ul class="main-menu">
-            <li><a href="./">Inicio</a></li>
+            <li><a href="./">Home</a></li>
             <li><a href="design.html">Design Thinking</a></li>
-            <li><a href="finalProject.html">Digital Manufacturing Project</a>
+            <li><a href="finalProject.html">Proyecto de Fabricación Digital</a>
                 <ul>
-                    <li><a href="#">week 1</a></li>
-                    <li><a href="#">week 2</a></li>
-                    <li><a href="#">week 3</a></li>
-                    <li><a href="#">week 4</a></li>
-                    <li><a href="#">week 5</a></li>
-                    <li><a href="#">week 6</a></li>
+                    <li><a href="#">1. Approach of the design thinking project.</a></li>
+                    <li><a href="#">2. Design thinking workshop.</a></li>
+                    <li><a href="#">3. Empathize.</a></li>
+                    <li><a href="#">4. Define.</a></li>
+                    <li><a href="#">5. Devise.</a></li>
+                    <li><a href="#">6. Prototype and testing.</a></li>
                 </ul>
-            </li>
-        </ul>
+            </li>            
+        </ul>            
     </nav>
 
-    <div id="think">
-        <div class="think__title">
-            <div class="think__title__text">
-                <h1>7 Sombreros</h1>
-            </div>
-            <div class="think__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
-            </div>
-        </div>
-
-        <div class="think">
+    <div class="think">
             <div class="think__img">
                 <img src="img/projects.jpeg" alt="">
             </div>
@@ -55,7 +45,7 @@
                     <div class="think__details__extra__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</div>
                 </div>
             </div>
-        </div>
+        </div>    
     </div>
     <footer id="footer">
             <div class="footer">
@@ -64,7 +54,7 @@
                     <img src="img/licencia.png" alt="">
                 </div>
                 <div class="footer__copy">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2018 - Designed by: <a href="a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
                 </div>
             </div>
         </footer>
