--- a/design-thinking/practica6.html
+++ b/design-thinking/practica6.html
@@ -9,10 +9,10 @@
     <title>Design Thinking</title>
 </head>
 <body>
-   <div id="top">
+    <div id="top">
         <div class="top">
             <div class="top__item">
-                <p>Language: <a href="../../index.html">English</a></p> 
+                <p>Language: <a href="../en/index.html">English</a></p> 
             </div>
         </div>
     </div>
@@ -46,36 +46,35 @@
     <!--div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Prototipar y Probar</h1>
+                <h1>Introducción al Design Thinking</h1>
             </div>
             <div class="think__title__content">
-                <p>En este documento se desarrollará el quinto y sexto objetivo del Desing Thinking: <br> Construir prototipos de las ideas más prometedoras. <br> Aprender a partir de las reacciones de los usuarios al interactuar con el prototipo. Por tanto, es necesario dejar que prueben el producto mediante los prototipos desarrollados, y recabar información gracias a dicha interacción.</p>
-            </div>
+                <p>“Design thinking” se presenta como una metodología para desarrollar la innovación centrada en las personas, ofreciendo una lente a través de la cual se pueden observar los retos, detectar necesidades y, finalmente, solucionarlas. </p>
         </div>
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ROXyNZassIA" frameborder="0" allowfullscreen></iframe>
+                <img src="../img/introduccion.jpg" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Prototipar y Probar</p>
-                    <p class="think__details__info__cont">A partir de ello se creó un prototipo de la interfaz que se utilizara para la aplicación  primero por medio de los bosquejos a mano alzada y luego se implemento por medio de un simulador de creación. Para probar la aplicación que se desarrolló; se realizó pruebas de interacción con los usuarios.</p>
+                    <p class="think__details__info__title">Introducción al Design Thinkingr</p>
+                    <p class="think__details__info__cont">En esta primera parte abarcaremos el primer objetivo de esta metodología que  se trata de adquirir conocimientos básicos sobre los usuarios y sobre la situación actual y los problemas que afrontas .Por ello en este documento encontrara las dos problemas que el grupo encontró como falencia en el Instituto Superior TECSUP.</p><a href="https://drive.google.com/file/d/1l_2Z2wYKPL4XytL_t37U4rbOWxoIYxFU/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento</a>
                 </div>
 
-                <div class="think__details__extra">
+                <!-- <div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas</p>
-                    <p>En el presente documento se muestra las interfaces de la implementación de la aplicación a mano alzada , como también la descomposición funcional de cada interfaz.</p>
-                    <a href="https://drive.google.com/file/d/1Zb2-cKHCgSbRFGzOhkTRRixtKBdDmB6Y/view?usp=sharing" class="think__details__extra__description"  target="_blank">Documento - Respuestas</a>
+                    <p>En el presente documento se muestra el análisis total del problema, basándonos en las respuestas de los encuestados.</p>
+                    <a href="https://drive.google.com/open?id=1K4NFkj3El4lRBq5SVDEvw3mak2-1AWdu" target="_blank" class="think__details__extra__description">Documento - Respuestas</a>
                 </div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Prototipo</p>
-                    <p>En el presente documento muestra la interfaz gráfica ya implementada de manera funcional tomando en cuenta las ideas propuestas por los alumnos.</p>
-                    <a href="https://xd.adobe.com/view/3691c97a-a8c5-4001-a027-68f6afc2ec5f/" target="_blank" class="think__details__extra__description">Prototipo</a>
-                </div>
+                    <p class="think__details__extra__title">Respuestas Encuesta</p>
+                    <p>En el presente archvo muestra a detalle los resultados de la encuesta a los estudiantes, sobre el servicio de atención en ambas cafeterías.</p>
+                    <a href="https://drive.google.com/open?id=1PHGLUB1CPTJZH-x0X2J5i2ZnAt8MoD09" target="_blank" class="think__details__extra__description">Documento - Respuestas Encuesta</a>
+                </div> -->
             </div>
         </div>
     </div>
