--- a/design.html
+++ b/design.html
@@ -22,21 +22,22 @@
 			<li><a href="index.html">Inicio</a></li>
             <li><a href="design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="design-thinking/practica1.html">Introdución</a></li>
-                    <li><a href="design-thinking/practica2.html">Empatizar y Definir</a></li>
-                    <li><a href="design-thinking/practica3.html">Idear</a></li>
-                    <li><a href="design-thinking/practica4.html">Prototipar</a></li>
-                    <li><a href="design-thinking/practica5.html">Testear</a></li>
+                    <li><a href="design-thinking/practica1.html">1. Planteamiento del proyecto de design thinking</a></li>
+                    <li><a href="design-thinking/practica2.html">2. Taller de design thinking</a></li>
+                    <li><a href="design-thinking/practica3.html">3. Empatizar</a></li>
+                    <li><a href="design-thinking/practica4.html">4. Definir</a></li>
+                    <li><a href="design-thinking/practica5.html">5. Idear</a></li>
+                    <li><a href="design-thinking/practica6.html">6. Prototipo y testeo</a></li>
                 </ul>
              </li>
-            <li><a href="finalProject.html">Proyecto Final</a>
+            <li><a href="finalProject.html">Proyecto de Fabricación Digital</a>
                 <ul>
-                    <li><a href="proyecto-final/semana1.html">Semana 1</a></li>
-                    <li><a href="proyecto-final/semana2.html">Semana 2</a></li>
-                    <li><a href="proyecto-final/semana3.html">Semana 3</a></li>
-                    <li><a href="proyecto-final/semana4.html">Semana 4</a></li>
-                    <li><a href="proyecto-final/semana5.html">Semana 5</a></li>
-                    <li><a href="proyecto-final/semana6.html">Semana 6</a></li>
+                    <li><a href="proyecto-final/semana1.html">1. Gestión de proyectos.</a></li>
+                    <li><a href="proyecto-final/semana2.html">2. Desarrollo de planos 2D y/o 3D.</a></li>
+                    <li><a href="proyecto-final/semana3.html">3. Ejecución de proyecto final.</a></li>
+                    <li><a href="proyecto-final/semana4.html">4. Presentación del proyecto preliminar.</a></li>
+                    <li><a href="proyecto-final/semana5.html">5. Desarrollo de la presentación final al público.</a></li>
+                    <li><a href="proyecto-final/semana6.html">6. Preparación de Speech.</a></li>
                 </ul>
             </li>
 		</ul>
@@ -48,9 +49,7 @@
                 <h1>design <span>Thiking</span></h1>
             </div>
             <div class="design__title__content">
-                <p>Es aquí donde  todos tendremos que pensar como un diseñador e iniciamos a ver distintos problemas a la vez dandole una solución innovadora, es así como vemos un problema de bajo consumo de proteínas en los empleados de distintas empresas del Perú y pensamos que uno de los mejores alimentos fáciles de consumir son los Snacks y creímos que vender frutas secas sería genial para que los trabajadores que estan en posibilidades que dentro de su centro laboral haya una máquina dispensadora de frutos secos para mayor desempeño laboral </p><iframe width="560" height="315" src="https://www.youtube.com/embed/r9cd5sm_-Us" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            </div>
-
+                <p>RONADOMI</p>
             </div>
         </div>
         <div class="design">
@@ -59,11 +58,11 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica2.html" class="design__item__info__title">Empatizar y Definir</a>
-                    <p class="design__item__info__details">Realizamos una encuesta a estudiantes, docentes para determinar si el proyecto seria aceptado por la comunidad.</p>
+                    <a href="design-thinking/practica1.html" class="design__item__info__title">1. Planteamiento del proyecto de design thinking.</a>
+                    <p class="design__item__info__details">Para más información hacer click.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="img/empatizar.jpeg" alt="">
+                    <img src="img/planteamiento.gif" alt="">
                 </div>
             </div>
             <div class="design__item">
@@ -71,11 +70,23 @@
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica3.html" class="design__item__info__title">Idear</a>
-                    <p class="design__item__info__details">Realizamos de lluvia de ideas para determinar los posibles opciones que tendra nuestra proyecto. Además usamos el método de los 7 sombreros para organizar y discriminar las ideas dadas.</p>
+                    <a href="design-thinking/practica2.html" class="design__item__info__title">2. Taller de design thinking.</a>
+                    <p class="design__item__info__details">Para más información hacer click.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="img/idear.jpeg" alt="">
+                    <img src="img/taller.gif" alt="">
+                </div>
+            </div>
+            <div class="design__item">
+                <div class="design__item__icon">
+                    <i class="icon-chaplin-hat-movie-streamline"></i>
+                </div>
+                <div class="design__item__info">
+                    <a href="design-thinking/practica3.html" class="design__item__info__title">3. Empatizar.</a>
+                    <p class="design__item__info__details">Para más información hacer click.</p>
+                </div>
+                <div class="design__item__img">
+                    <img src="img/empatizar.gif" alt="">
                 </div>
             </div>
 
@@ -84,11 +95,11 @@
                     <i class="icon-edit-modify-streamline"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica4.html" class="design__item__info__title">prototipar y probar</a>
-                    <p class="design__item__info__details">Realizamos de lluvia de ideas para determinar los posibles opciones que tendra nuestra proyecto. Además usamos el método de los 7 sombreros para organizar y discriminar las ideas dadas.</p>
+                    <a href="design-thinking/practica4.html" class="design__item__info__title">4. Definir.</a>
+                    <p class="design__item__info__details">Para más información hacer click.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="img/prototipar.jpeg" alt="">
+                    <img src="img/ideas.gif" alt="">
                 </div>
             </div>
 
@@ -97,13 +108,26 @@
                     <i class="icon-picture-streamline-1"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica5.html" class="design__item__info__title">Testear</a>
-                    <p class="design__item__info__details">Realizamos un calendario en MDF, usando la cortadora láser.</p>
+                    <a href="design-thinking/practica5.html" class="design__item__info__title">5. Idear.</a>
+                    <p class="design__item__info__details">Para más información hacer click.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="img/fabricacion.jpeg" alt="">
+                    <img src="img/idear.gif" alt="">
                 </div>
             </div>
+            <div class="design__item">
+                <div class="design__item__icon">
+                    <i class="icon-picture-streamline-1"></i>
+                </div>
+            <div class="design__item__info">
+                    <a href="design-thinking/practica6.html" class="design__item__info__title">6. Prototipo y testeo.</a>
+                    <p class="design__item__info__details">Para más información hacer click.</p>
+                </div>
+                <div class="design__item__img">
+                    <img src="img/prototipar.gif" alt="">
+                </div>
+            </div>
+            
         </div>
     </div>
     <footer id="footer">
@@ -114,7 +138,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
                 </div>
             </div>
         </footer>
