--- a/en/final-project/semana1.html
+++ b/en/final-project/semana1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>Final Project - Week 1</title>
+    <title>Proyecto de Fabricación Digital</title>
 </head>
 <body>
     <div id="top">
@@ -22,22 +22,22 @@
 		<li><a href="../index.html">Home</a></li>
             <li><a href="../design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="../design-thinking/practica1.html">Empatize</a></li>
-                    <li><a href="../design-thinking/practica2.html">Define</a></li>
-                    <li><a href="../design-thinking/practica3.html">Devise</a></li>
-                    <li><a href="../design-thinking/practica4.html">Prototype</a></li>
-                    <li><a href="../design-thinking/practica5.html">Test</a></li>
+                    <li><a href="../design-thinking/practica1.html">1. Approach of the design thinking project</a></li>
+                    <li><a href="../design-thinking/practica2.html">2. Design thinking workshop</a></li>
+                    <li><a href="../design-thinking/practica3.html">3. Empathize</a></li>
+                    <li><a href="../design-thinking/practica4.html">4. Define</a></li>
+                    <li><a href="../design-thinking/practica5.html">4. Devise</a></li>
+                    <li><a href="../design-thinking/practica5.html">6. Prototype and testing</a></li>
                 </ul>
              </li>
-            <li><a href="../finalProject.html">Digital Manufacturing Project
-</a>
+            <li><a href="../finalProject.html">Digital Manufacturing Project</a>
                 <ul>
-                    <li><a href="semana1.html">Week 1</a></li>
-                    <li><a href="semana2.html">Week 2</a></li>
-                    <li><a href="semana3.html">Week 3</a></li>
-                    <li><a href="semana4.html">Week 4</a></li>
-                    <li><a href="semana5.html">Week 5</a></li>
-                    <li><a href="semana6.html">Week 6</a></li>
+                    <li><a href="semana1.html">1. Project management.</a></li>
+                    <li><a href="semana2.html">2. Development of 2D and / or 3D plans.</a></li>
+                    <li><a href="semana3.html">3. Execution of the final project.</a></li>
+                    <li><a href="semana4.html">4. Presentation of the preliminary project.</a></li>
+                    <li><a href="semana5.html">5. Development of the final presentation to the public.</a></li>
+                    <li><a href="semana6.html">6. Preparation of Speech.</a></li>
                 </ul>
             </li>
 		</ul>
@@ -46,39 +46,43 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Week 1</h1>
+                <h1>1. Gestión de proyectos.</h1>
             </div>
+            <div class="think__title__content">
+                <p>"In this section will be the proposal of the design in laser cutting by computer explained in a brief description of what will be treated, which with its components, utility, customer sector and economic social impact. Specifications of the members' capacities. </p>
         </div>
 
         <div class="think">
             <div class="think__img">
-                <img src="../../img/chanca.gif" alt="">
+                <img src="../../img/Imaginar.jpeg" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Gant Diagram - Sketch - Functional Decomposition</p>
-                    <p class="think__details__info__cont">In this file it will be possible to visualize the use of the techniques to be able to start implementing the project of the security system from a mobile application based on the research carried out by the members of the group.</p>
-                     <img src="../../img/plantilla.jpg" alt="">
+                    <p class="think__details__info__title">1. The project proposal for the Digital Manufacturing Project is human-oriented, feasible and functional. And be present involved.</p>
+                    <p class="think__details__info__title">Title:</p>
+                    <p class="think__details__info__cont">Plant Lamp</p>
+                    <p class="think__details__info__title">Issue:</p>
+                    <p class="think__details__info__cont">  The design presented in the Fab Lab is the proposal of an ecological lamp that generates electricity and oxygen at the same time. This will help save energy and help the environment.It will be designed on top of a common plant, the only thing that is needed is the sand, the focus will be a diamond to give it a better aesthetic but it can also be of any shape..</p>
+                    <p class="think__details__info__title">2.-The proposal is of high social, economic impact.</p>
+                    <p class="think__details__info__title">Hypothesis:</p>
+                    <p class="think__details__info__cont">
+                    • The proposal on ecological lamps is of high social impact since it involves the development of technology and the use of clean energies to provide light to rural areas that hardly have access to the electricity grid and that even resort to the use of candles or candlesticks with fuel, which report many cases of fatal accidents.
+                    • The proposal on ecological lamps is of high economic impact, because it is an idea of ​​sustainability with the environment and that can contribute with lighting or as an energy source to charge an electronic device. If a study of production and sales costs is carried out, a profit can be obtained from a positive margin, for which reason it is advisable to study in depth the market of this niche, as well as experiences of success from abroad that allow to scale up the production in a stage more advanced a posterior.  
+                    </p>
+            
+                    <p class="think__details__info__title">3. Additional elements for development.</p>
+                    <p class="think__details__info__cont">• In the fab lap project "Ecological lamp" you will have the following additional elements:
+                        A small electrical system that will be composed of a copper foil and a sheet of zinc but these elements can be changed.
+                        A diamond-shaped focus made of acrylic
+                        A led spotlight.
+                    </p>
+                    <p class="think__details__info__title">4. Develop a Gantt Diagram of activities for the development of design thinking.</p>
+                    <p class="think__details__info__cont">• Chronology
+                    </p><a href="https://drive.google.com/open?id=1BSBhvm9RC9sNoYm5G57BF2zNXvWAAf8x">Click to see the chronology</a>
                 </div>
-
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Gant Diagram</p>
-                    <p>The Gantt chart is a graphical tool whose objective is to expose the expected dedication time for different tasks or activities over a given total time; in this case we will use it to start up the security system project.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/open?id=1oWtL5qB9TuM4tY1GiGK4lFBtQJbUiG-b" target="_blank">Archive - Gant's diagram</a></div>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Initial Draft</p>
-                    <p>The sketch represents the first concrete step of the work, that is, the first materialization of the author's idea. In this case the first prototype design of the possible circuit and the operation of the camera.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/a/tecsup.edu.pe/file/d/1hZ4Z6VsdqTRH8EXqzxkvn5ZJxHyoEOk5/view?usp=sharing" target="_blank">Document - Initial Draft</a></div>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Functional Decomposition</p>
-                    <p>Functional decomposition refers broadly to the process of solving a functional relation in its constituent parts, in such a way that the original function can be reconstructed (ie, recomposed) of the parts according to the composition. <br>
-                    In the project was applied to recognize the components and know about each of them, as well as its operation.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/a/tecsup.edu.pe/file/d/1hZ4Z6VsdqTRH8EXqzxkvn5ZJxHyoEOk5/view?usp=sharing" target="_blank">Document - Functional Decomposition</a></div>
                 </div>
             </div>
         </div>
@@ -91,7 +95,7 @@
             </div>
             <div class="footer__copy">
                 <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2017 - Designed by: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                <p>&copy; 2018 - Designed by: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe.</a></p>
             </div>
         </div>
     </footer>
