--- a/en/final-project/semana3.html
+++ b/en/final-project/semana3.html
@@ -21,22 +21,23 @@
 		<ul class="main-menu" id="main-menu">
 			<li><a href="../index.html">Home</a></li>
             <li><a href="../design.html">Design Thinking</a>
-				<ul>
-                    <li><a href="../design-thinking/practica1.html">Practice 1</a></li>
-                    <li><a href="../design-thinking/practica2.html">Practice 2</a></li>
-                    <li><a href="../design-thinking/practica3.html">Practice 3</a></li>
-                    <li><a href="../design-thinking/practica4.html">Practice 4</a></li>
-                    <li><a href="../design-thinking/practica5.html">Practice 5</a></li>
+                <ul>
+                    <li><a href="../design-thinking/practica1.html">1. Approach of the design thinking project</a></li>
+                    <li><a href="../design-thinking/practica2.html">2. Design thinking workshop</a></li>
+                    <li><a href="../design-thinking/practica3.html">3. Empathize</a></li>
+                    <li><a href="../design-thinking/practica4.html">4. Define</a></li>
+                    <li><a href="../design-thinking/practica5.html">4. Devise</a></li>
+                    <li><a href="../design-thinking/practica5.html">6. Prototype and testing</a></li>
                 </ul>
              </li>
-            <li><a href="../finalProject.html">Final Project</a>
+            <li><a href="../finalProject.html">Digital Manufacturing Project<</a>
                 <ul>
-                    <li><a href="semana1.html">Week 1</a></li>
-                    <li><a href="semana2.html">Week 2</a></li>
-                    <li><a href="semana3.html">Week 3</a></li>
-                    <li><a href="semana4.html">Week 4</a></li>
-                    <li><a href="semana5.html">Week 5</a></li>
-                    <li><a href="semana6.html">Week 6</a></li>
+                    <li><a href="semana1.html">1. Project management.</a></li>
+                    <li><a href="semana2.html">2. Development of 2D and / or 3D plans.</a></li>
+                    <li><a href="semana3.html">3. Execution of the final project.</a></li>
+                    <li><a href="semana4.html">4. Presentation of the preliminary project.</a></li>
+                    <li><a href="semana5.html">5. Development of the final presentation to the public.</a></li>
+                    <li><a href="semana6.html">6. Preparation of Speech.</a></li>
                 </ul>
             </li>
 		</ul>
@@ -45,11 +46,10 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Week 3</h1>
-            </div>
-            <!-- <div class="think__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
-            </div> -->
+                <h1>Execution of the final project</h1>
+             </div>
+            <div class="think__title__content">
+                <p>Presentation of second prototype echo to the corresponded material of the project. The design and configuration of the proposal is explained. Prototype video material.</p>
         </div>
 
         <div class="think">
@@ -86,7 +86,7 @@
             </div>
             <div class="footer__copy">
                 <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2017 - Designed by: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                <p>&copy; 2018 - Designed by: <a href="a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
             </div>
         </div>
     </footer>
