--- a/proyecto-final/semana3.html
+++ b/proyecto-final/semana3.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>Proyecto Final - Semana 3</title>
+    <title>Proyecto de Fabricación Digital</title>
 </head>
 <body>
     <div id="top">
@@ -22,21 +22,22 @@
                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../design.html">Design Thinking</a>
                     <ul>
-                        <li><a href="../design-thinking/practica1.html">Práctica 1</a></li>
-                        <li><a href="../design-thinking/practica2.html">Práctica 2</a></li>
-                        <li><a href="../design-thinking/practica3.html">Práctica 3</a></li>
-                        <li><a href="../design-thinking/practica4.html">Práctica 4</a></li>
-                        <li><a href="../design-thinking/practica5.html">Práctica 5</a></li>
-                    </ul>
-                 </li>
-                <li><a href="../finalProject.html">Proyecto Final</a>
-                    <ul>
-                        <li><a href="semana1.html">Semana 1</a></li>
-                        <li><a href="semana2.html">Semana 2</a></li>
-                        <li><a href="semana3.html">Semana 3</a></li>
-                        <li><a href="semana4.html">Semana 4</a></li>
-                        <li><a href="semana5.html">Semana 5</a></li>
-                        <li><a href="semana6.html">Semana 6</a></li>
+                    <li><a href="../design-thinking/practica1.html">1. Planteamiento del proyecto de design thinking</a></li>
+                    <li><a href="../design-thinking/practica2.html">2. Taller de design thinking</a></li>
+                    <li><a href="../design-thinking/practica3.html">3. Empatizar</a></li>
+                    <li><a href="../design-thinking/practica4.html">4. Definir</a></li>
+                    <li><a href="../design-thinking/practica5.html">5. Idear</a></li>
+                    <li><a href="../design-thinking/practica6.html">6. Prototipo y testeo</a></li>
+                </ul>
+             </li>
+            <li><a href="../finalProject.html">Proyecto de Fabricación Digital</a>
+                <ul>
+                    <li><a href="semana1.html">1. Gestión de proyectos.</a></li>
+                    <li><a href="semana2.html">2. Desarrollo de planos 2D y/o 3D.</a></li>
+                    <li><a href="semana3.html">3. Ejecución de proyecto final.</a></li>
+                    <li><a href="semana4.html">4. Presentación del proyecto preliminar.</a></li>
+                    <li><a href="semana5.html">5. Desarrollo de la presentación final al público.</a></li>
+                    <li><a href="semana6.html">6. Preparación de Speech.</a></li>
                     </ul>
                 </li>
             </ul>
@@ -45,12 +46,119 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Semana 3</h1>
+                <h1>Ejecución del Proyecto Final</h1>
+             <div class="think__title__content">
+                <p>Presentación de segundo prototipo hecho al material correspondido del proyecto. Se explica el diseño y configuración de la propuesta. Material del video del prototipo.</p>
+        </div>
             </div>
+        </div>
+
+        <div class="think">
+            <div class="think__img">
+                <img src="../img/calculo.PNG" alt="">
+            </div>
+            <div class="think__details">
+                <div class="think__details__icon">
+                    <i class="icon-settings-streamline"></i>
+                </div>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">1.   Diseño de la propuesta considerando las características de la máquina.</p>
+                    <p class="think__details__info__cont"><p>Nuestra propuesta de trabajo se adapta a la fabricación digital de molde y fundición. Los llaveros RF tienen el propósito principal de facilitar encontrar nuestras llaves dentro de las instalaciones y agilizar la entrada y salida de los clientes y del personal autorizado en cualquier lugar de acceso.
+                    <p>¿Porque este tipo de llavero se adapta perfectamente a tus necesidades?<p>
+                    <p>Ventajas de un llavero RF<p>
+                    <p>Los llaveros RF, también denominadas contactless o de proximidad, ofrecen innumerables ventajas. La principal de ellas es, sin duda, la de encontrar nuestras llaves.<p> 
+                    <p>Otro de los aspectos más positivos que tienen es que, tienen un desgaste mínimo, por lo que son muy rentables y eficaces. Con ellas, se consigue encontrar de una manera rápida las llaves, para acceder a las instalaciones determinadas.<p>
+                    <p>Otra ventaja de esta tecnología, es que la frecuencia emitida con estas llaves no interfiere de ninguna manera con otros dispositivos electrónicos. Además, pueden leerse incluso estando dentro de diferentes tipos de accesorios, como una caja de cartón, plástico u otro contenedor.<p>
+                    <p>Por todos estos aspectos y otros más, estas llaves han logrado insertarse en el mercado cada vez con más frecuencia, y muchas son las personas que confían plenamente en ella.<p>
+                    <p>Al tratarse de un formato más resistente, permite a los clientes utilizarlo en cualquier situación y llevarlo siempre consigo. El llavero RF está compuesto por plástico resistente y permite conservar el chip intacto durante más tiempo, protegido de caídas, golpes e incluso del agua. Una forma ideal de que nuestros clientes lleven su chip RF vaya donde vayan.<p> 
+                    <p>Además tiene la ventaja de servir como soporte de publicidad, por ejemplo para colocar nuestro logo en la parte central del llavero. También se puede elegir el color del llavero RF para que se adapte a la imagen corporativa de tu empresa.<p>
+
+                </div>                
+            </div>
+        </div>
+        <div class="think">
+            <div class="think__img">
+                <img src="../img/calculo1.png" alt="">
+            </div>
+            <div class="think__details">
+                <div class="think__details__icon">
+                    <i class="icon-settings-streamline"></i>
+                </div>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">2.   Diseño de la propuesta con paramétricos para que sean flexibles al cambio de forma rápida.</p>
+                    <p class="think__details__info__cont"><p>Nuestros diseños se realizan en un software llamado Rhino el cual nos permite crear, editar, analizar, documentar, renderizar, animar y traducir curvas NURBS*, superficies y sólidos, nubes de puntos y mallas poligonales. No hay límite de complejidad, grado o tamaño.
+                    Con lo cual nos permite cambiar nuestros parámetros de diseño haciéndolos flexibles y cambiarlos de manera rápida, ya que este programa cuenta con ciertas características que nos ayudan hacerlo.
+
+                    <p>Cuenta con las siguientes características especiales:
+                    <p>•   Ilimitadas herramientas de modelado 3D de forma libre, que solo se encuentran en productos que cuestan de 20 a 50 veces más. Con Rhino se puede modelar cualquier forma imaginable.
+                    <p>•   Precisión necesaria para el diseño, los prototipos, la ingeniería, el análisis y la fabricación de cualquier producto, desde aviación hasta joyería.
+                    <p>•   Compatibilidad con la mayoría de programas de diseño, dibujo, CAM, ingeniería, prototipado, análisis, renderizado, animación e ilustración.
+                    <p>•   Lee y repara complicadas mallas y archivos IGES.
+                    <p>•   Accessible. Es tan fácil de aprender y de utilizar que se puede dedicar al diseño y la visualización sin tener que preocuparse por el software.
+                    <p>•   Rápido, incluso en un ordenador portátil común. No se necesita ningún hardware especial.
+                    <p>•   Plataforma de desarrollo para cientos de productos 3D especializados.
+                    <p>•   Bajo coste. Hardware común. Curva de aprendizaje corta. Precio asequible. Sin cuotas de mantenimiento.
+                    <p>Fabricación digital e impresión 3D
+                    <p>Como ya sabrán, el proyecto de desarrollo de Rhino comenzó hace casi 20 años con el objetivo de ofrecer a los diseñadores navales herramientas para la creación de modelos informáticos que pudieran utilizarse para manejar el equipo de fabricación que se controlaba digitalmente en los astilleros.
+                    <p>Continuamos pensando que los diseños solo son útiles una vez ya están fabricados y en las manos de los consumidores. Hoy en día, debido a que los precios de la tecnología de impresión 3D y fabricación digital están bajando rápidamente, cada vez más diseñadores tienen acceso directo a equipos de fabricación digital 3D.
+                    <p>Aunque no somos expertos en todos los procesos de fabricación y construcción existentes, hemos centrado nuestros esfuerzos en asegurarnos de que los modelos de Rhino sean suficientemente precisos y accesibles para hacer realidad todos los procesos de un diseño.
+                    </p>
+                </div>           
+            </div>
+        </div>
+        <div class="think">
+            <div class="think__img">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/NyOjrLV09NI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
+            <div class="think__details">
+                <div class="think__details__icon">
+                    <i class="icon-settings-streamline"></i>
+                </div>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">3.   Publicamos la propuesta en la página web: </p>
+                    <div class="think__details__extra">                    
+                    <p class="think__details__info__title">a.   Describimos el diseño donde el proyecto es flexible a los cambios utilizando paramétricos (Video publicado en Youtube o Vmeo).</p>
+                    <p class="think__details__extra__title">Reproducir el video haciendo click encima.</p>
+                    <p class="think__details__info__title">b.    Publicamos los enlaces para descargar los archivos generados (el diseño 2D /3D y el informe en word)</p>
+                    <div class="think__details__extra">
+                    <p class="think__details__extra__title">Enlaces para descargar los archivos</p>
+                    <p class="think__details__extra__description">EL presente archivo muestra el informe sobre los posibles modelos.</p>
+                    <a href="https://drive.google.com/open?id=1c6GL5uFuWMlMZwfXWuanqRICBD7KaxTk" target="_blank">Hacer click aqui para descargar (Word).</a>
+                    <p class="think__details__extra__description">EL presente archivo muestra el modelo 1 (Rhinoceros).</p>
+                    <a href="https://drive.google.com/open?id=1BQIv8n-E34pLTMlAiaWvr0esqItSdo49" target="_blank">Hacer click aqui para descargar.</a>
+                    <p class="think__details__extra__description">EL presente archivo muestra el modelo 2 (Rhinoceros).</p>
+                    <a href="https://drive.google.com/open?id=1GmNWqKgLPjaMbeUt935QGRYTZxZJcOOS" target="_blank">Hacer click aqui para descargar.</a>
+                    <p class="think__details__extra__description">EL presente archivo muestra el modelo 3 (Rhinoceros).</p>
+                    <a href="https://drive.google.com/open?id=1Ogh8IhzTtyM7EYIZ3s2cj9Zx8Xx4qTUT" target="_blank">Hacer click aqui para descargar.</a>
+
+                </div>                    
+                </div>               
+            </div>
+        </div>
+    </div>
+    <footer id="footer">
+            <div class="footer">
+                <div class="footer__licencia">
+                    <p>Licencia:</p>
+                    <img src="../img/licencia.png" alt="">
+                </div>
+                <div class="footer__copy">
+                    <img src="../img/fablab.png" alt="">
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
+                </div>
+            </div>
+        </footer>
+    <script src="../js/script.js"></script>
+    <script>
+        edgrid.menu('main-nav','main-menu');
+    </script>
+</body>
+</html>
+
             <!-- <div class="think__title__content">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
             </div> -->
-        </div>
+        <!--/div>
 
         <div class="think">
             <div class="think__img">
@@ -86,7 +194,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                   <p>&copy; 2018 - Diseñado por: <a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
                 </div>
             </div>
         </footer>
