--- a/en/design-thinking/practica2.html
+++ b/en/design-thinking/practica2.html
@@ -12,7 +12,7 @@
     <div id="top">
         <div class="top">
             <div class="top__item">
-                <p>Language: <a href="../../index.html">English</a></p> 
+                <p>Idioma: <a href="../../index.html">Español</a></p> 
             </div>
         </div>
     </div>
@@ -55,7 +55,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=iOiHvKFMPy8&feature=youtu.be" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/iOiHvKFMPy8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -66,9 +66,6 @@
                     <p class="think__details__info__cont"><p>The Design Thinking is the methodology that will be used throughout this project, this is presented as a tool to develop the innovation centered on the people, through the orderly and strategic follow-up of the steps of this useful tool you can observe the challenges , detect needs and, finally, solve them.</p>
 
                     </p>
-                </div>
-
-
                 </div>
 
                 <div class="think__details__info">
