--- a/en/final-project/semana2.html
+++ b/en/final-project/semana2.html
@@ -54,7 +54,7 @@
 
         <div class="think">
             <div class="think__img">
-                <img src="../../img/calculo.PNG" alt="">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/IyoOf8tEtpw?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -106,7 +106,7 @@
         </div>
         <div class="think">
             <div class="think__img">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/NyOjrLV09NI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -142,7 +142,7 @@
             </div>
             <div class="footer__copy">
                 <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2018 - Designed by: <a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
+                <p>&copy; 2018 - Designed by: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe</a></p>
             </div>
         </div>
     </footer>
