--- a/en/final-project/semana1.html
+++ b/en/final-project/semana1.html
@@ -54,7 +54,7 @@
 
         <div class="think">
             <div class="think__img">
-                <img src="../../img/Imaginar.jpeg" alt="">
+                <img src="../../img/pp.jpg" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -82,6 +82,11 @@
                     <p class="think__details__info__title">4. Develop a Gantt Diagram of activities for the development of design thinking.</p>
                     <p class="think__details__info__cont">• Chronology
                     </p><a href="https://drive.google.com/open?id=1BSBhvm9RC9sNoYm5G57BF2zNXvWAAf8x">Click to see the chronology</a>
+
+                     <p class="think__details__info__title">PERFIL</p>
+                     
+                    </p><a href="https://drive.google.com/open?id=1xhE7JgDRMFWO7aQm0gSf2Ad2N7mosQxc">Hacer click para ver el PERFIL.</a>
+
                 </div>
                 </div>
             </div>
