--- a/proyecto-final/semana1.html
+++ b/proyecto-final/semana1.html
@@ -54,7 +54,7 @@
 
         <div class="think">
             <div class="think__img">
-                <img src="../img/Imaginar.jpeg" alt="">
+                <img src="../img/pp.jpg" alt="">
             </div>
             <div class="think__details">
                 <!--div class="think__details__icon">
@@ -75,13 +75,16 @@
                     <p class="think__details__info__cont">•    En el proyecto del fab lab “Lámpara ecológica” tendrá los siguiente elementos adicionales:
                         Un pequeño sistema eléctrico que estará compuesto de una lámina de cobre y una lámina de zinc pero estos elementos se pueden cambiar.
                         Un foco en forma de diamante hecho de acrílico  
-                           Un foco led. 
+                           Un foco led.  </p>
 . 
                     </p>
                     <p class="think__details__info__title">4. Desarrolla un Diagrama Gantt de actividades para el desarrollo del design thinking.</p>
                     <p class="think__details__info__cont">• Cronología 
                     </p><a href="https://drive.google.com/open?id=1BSBhvm9RC9sNoYm5G57BF2zNXvWAAf8x">Hacer click para ver el CRONOGRAMA.</a>
                 </div>
+                <p class="think__details__info__title">PERFIL</p>
+                     
+                    </p><a href="https://drive.google.com/open?id=1xhE7JgDRMFWO7aQm0gSf2Ad2N7mosQxc">Hacer click para ver el PERFIL.</a>
 
                 <!-- <div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas</p>
