--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -43,38 +43,45 @@
 		</ul>
 	</nav>
 
-    <!--div id="think">
+    <--div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Prototipar y Probar</h1>
+                <h1>DEFINIR</h1>
             </div>
-            <div class="think__title__content">
-                <p>En este documento se desarrollará el quinto y sexto objetivo del Desing Thinking: <br> Construir prototipos de las ideas más prometedoras. <br> Aprender a partir de las reacciones de los usuarios al interactuar con el prototipo. Por tanto, es necesario dejar que prueben el producto mediante los prototipos desarrollados, y recabar información gracias a dicha interacción.</p>
+             <div class="think__title__content">
+                <p>Según nuestro Benchmarking de la lámpara ecológica  con las páginas de venta que tiene el mismo sistema de producto en una fuente alternativa de energía se puede tomar como criterios para evaluar las siguientes expresadas en el cuadro. Además tomamos las cuatro tendencias que deben tenerse en cuenta por los riesgos y oportunidades que implican: </p>
+                
             </div>
         </div>
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ROXyNZassIA" frameborder="0" allowfullscreen></iframe>
+                <img src="../img/instala.jpg" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Prototipar y Probar</p>
-                    <p class="think__details__info__cont">A partir de ello se creó un prototipo de la interfaz que se utilizara para la aplicación  primero por medio de los bosquejos a mano alzada y luego se implemento por medio de un simulador de creación. Para probar la aplicación que se desarrolló; se realizó pruebas de interacción con los usuarios.</p>
+                    <p class="think__details__info__title">DEFINIR</p>
+                    <p class="think__details__info__cont">
+                        <p>1.  Los avances tecnológicos y la velocidad de creación.Al utilizar un alternativa de energía ayudando al medio ambiente.
+                        <p>2.  La globalización y la pérdida de ventajas geográficas.
+                            Nos enfocamos en que este producto no hay un mercado establecido en nuestro país solo paginas extranjeras para su distribución que varían su precio
+                        <p>3.  El creciente poder de los consumidores y su capacidad de obtener lo que quieren, cuando quieren y cómo lo quieren.
+                         Este se informara a través de una página dando los detalles del producto desde su elaboración hasta su finalización para que se informen nuestros clientes.
+                        <p>4.  La cantidad de información que podemos disponer hoy sobre nuestros clientes
+                        <p>Hoy en día la tecnología permite a un competidor del mismo  producto  y a un consumidor comprarlo en cualquier lugar del mundo. Actualmente, también aparecen nuevos competidores que no siempre provienen de la misma industria y ofrecen soluciones para los clientes de manera más rápida. Pero nosotros nos enfocamos en nuestro país ya que no tiene alto impacto esta nueva tecnología.</div>
+
                 </div>
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas</p>
                     <p>En el presente documento se muestra las interfaces de la implementación de la aplicación a mano alzada , como también la descomposición funcional de cada interfaz.</p>
-                    <a href="https://drive.google.com/file/d/1Zb2-cKHCgSbRFGzOhkTRRixtKBdDmB6Y/view?usp=sharing" class="think__details__extra__description"  target="_blank">Documento - Respuestas</a>
+                    <a href="https://drive.google.com/open?id=1Px0mPVULPNzOsQ3VIAB2eCLeQLaKDEZt"  target="_blank">Documento - Respuestas</a>
                 </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Prototipo</p>
-                    <p>En el presente documento muestra la interfaz gráfica ya implementada de manera funcional tomando en cuenta las ideas propuestas por los alumnos.</p>
-                    <a href="https://xd.adobe.com/view/3691c97a-a8c5-4001-a027-68f6afc2ec5f/" target="_blank" class="think__details__extra__description">Prototipo</a>
+                <img src="../img/defin.jpg" alt="">
+                
                 </div>
             </div>
         </div>
@@ -87,13 +94,13 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2018 - Diseñado por: <a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe</a></p>
                 </div>
             </div>
         </footer>
     <script src="../js/script.js"></script>
-	<script>
-		edgrid.menu('main-nav','main-menu');
-	</script>
+    <script>
+        edgrid.menu('main-nav','main-menu');
+    </script>
 </body>
 </html>
