--- a/en/design-thinking/practica4.html
+++ b/en/design-thinking/practica4.html
@@ -22,21 +22,22 @@
 			<li><a href="../index.html">Home</a></li>
             <li><a href="../design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="practica1.html">Práctice 1</a></li>
-                    <li><a href="practica2.html">Practice 2</a></li>
-                    <li><a href="practica3.html">Practice 3</a></li>
-                    <li><a href="practica4.html">Practice 4</a></li>
-                    <li><a href="practica5.html">Practice 5</a></li>
+                     <li><a href="practica1.html">1. Approach of the design thinking project</a></li>
+                    <li><a href="practica2.html">2. Design thinking workshop</a></li>
+                    <li><a href="practica3.html">3. Empathize</a></li>
+                    <li><a href="practica4.html">4. Define</a></li>
+                    <li><a href="practica5.html">5. Idear</a></li>
+                    <li><a href="practica6.html">6. Prototype and testing</a></li>
                 </ul>
              </li>
-            <li><a href="../finalProject.html">Final Project</a>
+            <li><a href="../finalProject.html">Digital Manufacturing Project</a>
                 <ul>
-                    <li><a href="../final-project/semana1.html">Week 1</a></li>
-                    <li><a href="../final-project/semana2.html">Week 2</a></li>
-                    <li><a href="../final-project/semana3.html">Week 3</a></li>
-                    <li><a href="../final-project/semana4.html">Week 4</a></li>
-                    <li><a href="../final-project/semana5.html">Week 5</a></li>
-                    <li><a href="../final-project/semana6.html">Week 6</a></li>
+                    <li><a href="../final-project/semana1.html">1. Project management.</a></li>
+                    <li><a href="../final-project/semana2.html">2. Development of 2D and / or 3D plans.</a></li>
+                    <li><a href="../final-project/semana3.html">3. Execution of the final project.</a></li>
+                    <li><a href="../final-project/semana4.html">4. Presentation of the preliminary project.</a></li>
+                    <li><a href="../final-project/semana5.html">5. Development of the final presentation to the public.</a></li>
+                    <li><a href="../final-project/semana6.html">6. Preparation of Speech.</a></li>
                 </ul>
             </li>
 		</ul>
@@ -45,54 +46,60 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Prototype and Test</h1>
+                <h1>DEFINE</h1>
             </div>
             <div class="think__title__content">
-                <p>In this document, the fifth and sixth objectives of Desing Thinking will be developed: <br> Build prototypes of the most promising ideas. <br> Learn from the reactions of users when interacting with the prototype. Therefore, it is necessary to let them test the product through the developed prototypes, and collect information thanks to this interaction.</p>
+                <p>According to our Benchmarking of the ecological lamp with the sales pages that have the same product system in an alternative source of energy can be taken as criteria to evaluate the following expressed in the table. We also take the four trends that must be taken into account due to the risks and opportunities involved:</p>
             </div>
+             
+ 
+
         </div>
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ROXyNZassIA" frameborder="0" allowfullscreen></iframe>
+                <img src="../../img/instala.jpg" alt="">
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Prototype and Test</p>
-                    <p class="think__details__info__cont">From this a prototype of the interface was created that will be used for the application first by means of freehand sketches and then implemented by means of a creation simulator. To test the application that was developed; Interaction tests with users were carried out.</p>
+                    <p class="think__details__info__title">DEFINE</p>
+                    <p class="think__details__info__cont"></div>
+                      <p>1. Technological advances and the speed of creation. When using an alternative energy helping the environment.
+                      <p>2. Globalization and the loss of geographic advantages.
+                        We focus on the fact that this product is not a market established in our country only foreign pages for distribution that vary their price
+                      <p>3. The growing power of consumers and their ability to obtain what they want, when they want and how they want it.
+                        This will be reported through a page giving the details of the product from its preparation to its completion for our customers to be informed.
+                      <p>4. The amount of information we have available about our clients today
+                      <p>Nowadays technology allows a competitor of the same product and a consumer to buy it anywhere in the world. Currently, new competitors also appear that do not always come from the same industry and offer solutions for customers more quickly. But we focus on our country since this new technology does not have a high impact.</div>
                 </div>
 
-                <div class="think__details__extra">
+                  <div class="think__details__extra">
                     <p class="think__details__extra__title">Answers</p>
-                    <p>This document shows the interfaces of the implementation of the freehand application, as well as the functional decomposition of each interface.</p>
-                    <a href="https://drive.google.com/file/d/0B9nFLiw-DDCCMzVhUHNIaUZlRWc/view" target="_blank" class="think__details__extra__description">Document - Answers</a>
+                      <p>This document shows the interfaces of the implementation of the freehand application, as well as the functional decomposition of each interface.</p>
+                    <a href="https://drive.google.com/open?id=1Px0mPVULPNzOsQ3VIAB2eCLeQLaKDEZt">Document - Answers</a>
+                  </div>
+                  <img src="../../img/defes.jpg" alt="">
                 </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Prototype</p>
-                    <p>In the present document it shows the graphic interface already implemented in a functional way taking into account the ideas proposed by the students.</p>
-                    <a href="https://xd.adobe.com/view/3691c97a-a8c5-4001-a027-68f6afc2ec5f/" target="_blank" class="think__details__extra__description">Prototype</a>
-                </div>
-            </div>
         </div>
     </div>
     <footer id="footer">
-        <div class="footer">
-            <div class="footer__licencia">
-                <p>License:</p>
-                <img src="../../img/licencia.png" alt="">
+            <div class="footer">
+                <div class="footer__licencia">
+                    <p>Licencia:</p>
+                    <img src="../../img/licencia.png" alt="">
+                </div>
+                <div class="footer__copy">
+                    <img src="../../img/fablab.png" alt="">
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe</a></p>
+                </div>
             </div>
-            <div class="footer__copy">
-                <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2018 - Designed by: <a href="a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
-            </div>
-        </div>
-    </footer>
+        </footer>
     <script src="../../js/script.js"></script>
-	<script>
-		edgrid.menu('main-nav','main-menu');
-	</script>
+    <script>
+        edgrid.menu('main-nav','main-menu');
+    </script>
 </body>
 </html>
