--- a/en/final-project/semana2.html
+++ b/en/final-project/semana2.html
@@ -54,81 +54,33 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/IyoOf8tEtpw?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/J6M7hxytuKc?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-settings-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">1. Design of the proposal considering the characteristics of the machine.</p>
-                    <p class="think__details__info__cont"><p>Our work proposal is adapted to the digital manufacture of mold and casting. RF keychains have the main purpose of making it easier to find our keys inside the facilities and to expedite the entry and exit of customers and authorized personnel at any place of access.
-                    <p>Why is this type of key ring perfectly suited to your needs?<p>
-                    <p>Advantages of an RF keychain<p>
-                    <p>RF keyrings, also called contactless or proximity, offer many advantages. The main one is, without a doubt, to find our keys.<p> 
-                    <p>Another one of the most positive aspects that they have is that, they have a minimum wear, reason why they are very profitable and effective. With them, you can find the keys in a quick way, to access the determined facilities.<p>
-                    <p>Another advantage of this technology is that the frequency emitted with these keys does not interfere in any way with other electronic devices. In addition, they can be read even when they are inside different types of accessories, such as a cardboard box, plastic or other container.<p>
-                    <p>For all these aspects and others, these keys have managed to enter the market more and more frequently, and many are the people who fully trust in it.<p>
-                    <p>As it is a more resistant format, it allows customers to use it in any situation and always carry it with them. The RF keychain is made of sturdy plastic and keeps the chip intact for longer, protected from drops, bumps and even water. An ideal way for our customers to carry their RF chip wherever they go.<p> 
-                    <p>It also has the advantage of serving as an advertising support, for example to place our logo in the central part of the keychain. You can also choose the color of the RF keychain so that it adapts to the corporate image of your company.<p>
-
-                </div>                
-            </div>
-        </div>
-        <div class="think">
-            <div class="think__img">
-                <img src="../../img/calculo1.png" alt="">
-            </div>
-            <div class="think__details">
-                <div class="think__details__icon">
-                    <i class="icon-settings-streamline"></i>
+                    <p class="think__details__info__title">  Design of the proposal considering the characteristics of the machine.</p>
+                     <p class="think__details__extra__description">The present file shows model 1 (Rhinoceros).</p>
+                    <a href="https://drive.google.com/open?id=1VrwlRcM1haTCPEw_PvBwIGkZZ5V08-W5" target="_blank">Hacer click para ver la rúbrica.</a>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">2. Design the proposal with parametrics so that they are flexible to change quickly.</p>
-                    <p class="think__details__info__cont"><p>Our designs are made in a software called Rhino which allows us to create, edit, analyze, document, render, animate and translate NURBS * curves, surfaces and solids, point clouds and polygonal meshes. There is no limit of complexity, degree or size.
-                    With which allows us to change our design parameters making them flexible and change them quickly, because this program has certain features that help us do it.
-                    <p>It has the following special features:
-                    <p>•   Unlimited free-form 3D modeling tools, which can only be found in products that cost 20 to 50 times more. With Rhino you can model any imaginable shape.
-                    <p>•   Precision necessary for the design, prototypes, engineering, analysis and manufacture of any product, from aviation to jewelry.
-                    <p>•   Compatibility with most design, drawing, CAM, engineering, prototyping, analysis, rendering, animation and illustration programs.
-                    <p>•   Read and repair complicated meshes and IGES files.
-                    <p>•   Accessible It is so easy to learn and use that you can devote to design and visualization without having to worry about the software.
-                    <p>•   Fast, even in a common laptop. No special hardware required.
-                    <p>•   Development platform for hundreds of specialized 3D products.
-                    <p>•  Low cost. Common hardware Short learning curve. Affordable price. Without maintenance fees.
-                    <p>Digital manufacturing and 3D printing
-                    <p>As you already know, the Rhino development project started almost 20 years ago with the aim of offering naval designers tools for the creation of computer models that could be used to manage the manufacturing equipment that was digitally controlled in the shipyards.
-                    <p>We continue to think that designs are only useful once they are manufactured and in the hands of consumers. Nowadays, because the prices of 3D printing technology and digital manufacturing are falling rapidly, more and more designers have direct access to digital 3D manufacturing equipment.
-                    <p>Although we are not experts in all existing manufacturing and construction processes, we have focused our efforts on making sure Rhino models are accurate and accessible enough to make all design processes a reality.
-                    </p>
-                </div>           
-            </div>
-        </div>
-        <div class="think">
-            <div class="think__img">
-            
-            </div>
-            <div class="think__details">
-                <div class="think__details__icon">
-                    <i class="icon-settings-streamline"></i>
-                </div>
-                <div class="think__details__info">
-                    <p class="think__details__info__title">3. We publish the proposal on the website:</p>
+                    <p class="think__details__info__title">  We publish the proposal on the website: </p>
                     <div class="think__details__extra">                    
-                    <p class="think__details__info__title">a.  We describe the design where the project is flexible to changes using parametric (Video published on YouTube or Vmeo).</p>
-                    <p class="think__details__extra__title">Play the video by clicking on it.</p>
-                    <p class="think__details__info__title">b. We publish the links to download the generated files (the 2D / 3D design and the report in word)</p>
+                    <p class="think__details__info__title">a.   We describe the design where the project is flexible to changes using parametric (Video published on YouTube or Vmeo).</p>
+                   
+                    <p class="think__details__info__title">b.    We publish the links to download the generated files (the 2D / 3D design and the report in word)</p>
                     <div class="think__details__extra">
                     <p class="think__details__extra__title">Links to download files</p>
                     <p class="think__details__extra__description">The present file shows the report on possible models.</p>
-                    <a href="https://drive.google.com/open?id=1c6GL5uFuWMlMZwfXWuanqRICBD7KaxTk" target="_blank">Click here to download (Word).</a>
-                    <p class="think__details__extra__description">The present file shows model 1(Rhinoceros).</p>
-                    <a href="https://drive.google.com/open?id=1BQIv8n-E34pLTMlAiaWvr0esqItSdo49" target="_blank">Click here to download.</a>
-                    <p class="think__details__extra__description">The present file shows model 2 (Rhinoceros).</p>
-                    <a href="https://drive.google.com/open?id=1GmNWqKgLPjaMbeUt935QGRYTZxZJcOOS" target="_blank">Click here to download.</a>
-                    <p class="think__details__extra__description">The present file shows model 3 (Rhinoceros).</p>
-                    <a href="https://drive.google.com/open?id=1Ogh8IhzTtyM7EYIZ3s2cj9Zx8Xx4qTUT" target="_blank">Click here to download.</a>
-
+                    <a href="https://drive.google.com/open?id=1c6GL5uFuWMlMZwfXWuanqRICBD7KaxTk" target="_blank">Hacer click aqui para descargar (Word).</a>
+                    <p class="think__details__extra__description">This file shows the model 1 (Rhinoceros).</p>
+                    <a href="https://drive.google.com/open?id=1hqXp-Nn_CeQoDTNx1K1aXJhrt8Yp7fPn" target="_blank">Hacer click aqui para descargar.</a>
+                    <p class="think__details__extra__description">This file shows the model 2 (Rhinoceros).</p>
+                    <a href="https://drive.google.com/open?id=1jJ5i5IIz_WjZkhzi5EtE8mGLN259oaxg" target="_blank">Hacer click aqui para descargar.</a>
+                    <p class="think__details__extra__description">This file shows the model 3 (Rhinoceros).</p>
+                    <a href="https://drive.google.com/open?id=1-ns9V4QNdaNUzJ6XLWOGCkeEcDBpf6aV" target="_blank">Hacer click aqui para descargar.</a>
                 </div>                    
                 </div>               
             </div>
