--- a/en/final-project/semana3.html
+++ b/en/final-project/semana3.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>Final Project - Week 3</title>
+    <title>Digital Manufacturing Project - Execution of the final project</title>
 </head>
 <body>
     <div id="top">
@@ -52,10 +52,12 @@
                 <p>Presentation of second prototype echo to the corresponded material of the project. The design and configuration of the proposal is explained. Prototype video material.</p>
         </div>
 
+
         <div class="think">
             <div class="think__img">
-                <img src="../../img/2d.png" alt="">
+                <img src="../../img/mol2.jpeg" alt="">
             </div>
+
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-design-graphic-tablet-streamline-tablet"></i>
@@ -64,6 +66,7 @@
                     <p class="think__details__info__title">2D and / or 3D design</p>
                     <p class="think__details__info__cont">It is necessary to make a prototype before assembling it in the physical part, for that reason tools such as Autocad, rhinoceros, frizz helped us to make a virtual assembly of both the connections of the circuit that was developed in the sketch as well as the correct operation and possible improvements .</p>
                 </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Zec3HWJ6DxI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Document - 2D and 3D diagram</p>
@@ -79,20 +82,20 @@
         </div>
     </div>
     <footer id="footer">
-        <div class="footer">
-            <div class="footer__licencia">
-                <p>License:</p>
-                <img src="../../img/licencia.png" alt="">
+            <div class="footer">
+                <div class="footer__licencia">
+                    <p>Licencia:</p>
+                    <img src="../img/licencia.png" alt="">
+                </div>
+                <div class="footer__copy">
+                    <img src="../img/fablab.png" alt="">
+                    <p>&copy; 2017 - Diseñado por: <a href="doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe</a></p>
+                </div>
             </div>
-            <div class="footer__copy">
-                <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2018 - Designed by: <a href="a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
-            </div>
-        </div>
-    </footer>
-    <script src="../../js/script.js"></script>
-	<script>
-		edgrid.menu('main-nav','main-menu');
-	</script>
+        </footer>
+    <script src="../js/script.js"></script>
+    <script>
+        edgrid.menu('main-nav','main-menu');
+    </script>
 </body>
 </html>
