--- a/proyecto-final/semana1.html
+++ b/proyecto-final/semana1.html
@@ -72,10 +72,8 @@
                     La propuesta sobre lámparas ecológicas es de alto impacto  económico, porque es una idea de sostenibilidad con el ambiente y que puede contribuir con la iluminación o como fuente energética para cargar algun aparato electronico. Si se realiza un estudio de costos de producción y venta se puede obtener una utilidad de un margen positivo, por lo que es recomendable estudiar a profundidad el mercado de este nicho, así como experiencias de éxito del extranjero que permitan escalar la producción en una etapa más avanzada a posterior.
                     </p>
                     <p class="think__details__info__title">3. Elementos Adicionales para el desarrollo</p>
-                    <p class="think__details__info__cont">•    En el proyecto del fab lab “Lámpara ecológica” tendrá los siguiente elementos adicionales:
-                        Un pequeño sistema eléctrico que estará compuesto de una lámina de cobre y una lámina de zinc pero estos elementos se pueden cambiar.
-                        Un foco en forma de diamante hecho de acrílico  
-                           Un foco led.  </p>
+                    <p class="think__details__info__cont">•    En el proyecto del fab lab “Lámpara ” tendrá los siguiente elementos adicionales:
+                        Se colocará por el medio del diseño un tubo transparente y por dentro irá enrrollado una cinta conformada por leds para que pueda tener un buen efecto nuestra lámpara será nuestro sistema electrico con el buen diseño que generará buena ilucminación ya luego se le podrá cambiar acompañando con lo del proyecto de design thinking de manera ecológica.  </p>
 . 
                     </p>
                     <p class="think__details__info__title">4. Desarrolla un Diagrama Gantt de actividades para el desarrollo del design thinking.</p>
