--- a/en/final-project/semana1.html
+++ b/en/final-project/semana1.html
@@ -75,9 +75,7 @@
             
                     <p class="think__details__info__title">3. Additional elements for development.</p>
                     <p class="think__details__info__cont">• In the fab lap project "Ecological lamp" you will have the following additional elements:
-                        A small electrical system that will be composed of a copper foil and a sheet of zinc but these elements can be changed.
-                        A diamond-shaped focus made of acrylic
-                        A led spotlight.
+                        A transparent tube will be placed in the middle of the design, and inside it will be a ribbon made up of LEDs so that it can have a good effect. Our lamp will be our electrical system with the good design that will generate good illumination and then it can be changed accompanying it. of the design thinking project in an ecological way.
                     </p>
                     <p class="think__details__info__title">4. Develop a Gantt Diagram of activities for the development of design thinking.</p>
                     <p class="think__details__info__cont">• Chronology
@@ -110,3 +108,4 @@
 	</script>
 </body>
 </html>
+
