--- a/design.html
+++ b/design.html
@@ -108,11 +108,11 @@
                     <i class="icon-picture-streamline-1"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica5.html" class="design__item__info__title">5. Idear.</a>
+                    <a href="design-thinking/practica5.html" class="design__item__info__title">5. Prototipar.</a>
                     <p class="design__item__info__details">Para más información hacer click.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="img/idear.gif" alt="">
+                    <img src="img/prototipar.gif" alt="">
                 </div>
             </div>
             <div class="design__item">
@@ -120,11 +120,11 @@
                     <i class="icon-picture-streamline-1"></i>
                 </div>
             <div class="design__item__info">
-                    <a href="design-thinking/practica6.html" class="design__item__info__title">6. Prototipo y testeo.</a>
+                    <a href="design-thinking/practica6.html" class="design__item__info__title">6. Testear.</a>
                     <p class="design__item__info__details">Para más información hacer click.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="img/prototipar.gif" alt="">
+                    <img src="img/testear.gif" alt="">
                 </div>
             </div>
             
@@ -134,7 +134,7 @@
             <div class="footer">
                 <div class="footer__licencia">
                     <p>Licencia:</p>
-                    <img src="img/licencia.png" alt="">
+                    <img src="img/licencia.jpg" alt="">
                 </div>
                 <div class="footer__copy">
                     <img src="img/fablab.png" alt="">
