--- a/en/design-thinking/practica1.html
+++ b/en/design-thinking/practica1.html
@@ -26,8 +26,8 @@
                     <li><a href="practica2.html">2. Design thinking workshop</a></li>
                     <li><a href="practica3.html">3. Empathize</a></li>
                     <li><a href="practica4.html">4. Define</a></li>
-                    <li><a href="practica5.html">5. Idear</a></li>
-                    <li><a href="practica6.html">6. Prototype and testing</a></li>
+                    <li><a href="practica5.html">5. Prototype</a></li>
+                    <li><a href="practica6.html">6. Testing</a></li>
                 </ul>
              </li>
             <li><a href="../finalProject.html">Digital Manufacturing Project</a>
