--- a/en/design.html
+++ b/en/design.html
@@ -24,7 +24,7 @@
 				<ul>
                     <li><a href="design-thinking/practica1.html">1. Approach of the design thinking project.</a></li>
                     <li><a href="design-thinking/practica2.html">2. Design thinking workshop.</a></li>
-                    <li><a href="design-thinking/practica3.html">3. Empathize./a></li>
+                    <li><a href="design-thinking/practica3.html">3. Empathize.</a></li>
                     <li><a href="design-thinking/practica4.html">4. Define.</a></li>
                     <li><a href="design-thinking/practica5.html">5. Devise.</a></li>
                     <li><a href="design-thinking/practica6.html">6. Prototype and testing.</a></li>
@@ -108,11 +108,11 @@
                     <i class="icon-picture-streamline-1"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica5.html" class="design__item__info__title">5. Devise.</a>
+                    <a href="design-thinking/practica5.html" class="design__item__info__title">5. Prototype.</a>
                     <p class="design__item__info__details">For more information click.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="../img/idear.gif" alt="">
+                    <img src="../img/prototipar.gif" alt="">
                 </div>
             </div>
             <div class="design__item">
@@ -120,11 +120,11 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica6.html" class="design__item__info__title">6. Prototype and testing.</a>
+                    <a href="design-thinking/practica6.html" class="design__item__info__title">6. Testing.</a>
                     <p class="design__item__info__details">For more information click.</p>
                 </div>
                 <div class="design__item__img">
-                    <img src="../img/prototipar.gif" alt="">
+                    <img src="../img/testear.gif" alt="">
                 </div>
             </div>
         </div>
