--- a/en/index.html
+++ b/en/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>GRJ.SAC</title>
+    <title>RONADOMI 0.1</title>
 </head>
 <body>
     <div id="top">
@@ -26,8 +26,8 @@
                     <li><a href="design-thinking/practica2.html">2. Design thinking workshop</a></li>
                     <li><a href="design-thinking/practica3.html">3. Empathize</a></li>
                     <li><a href="design-thinking/practica4.html">4. Define</a></li>
-                    <li><a href="design-thinking/practica5.html">5. Idear</a></li>
-                    <li><a href="design-thinking/practica6.html">6. Prototype and testing</a></li>
+                    <li><a href="design-thinking/practica5.html">5. Prototype</a></li>
+                    <li><a href="design-thinking/practica6.html">6. Testing</a></li>
                 </ul>
              </li>
             <li><a href="finalProject.html">Digital Manufacturing Project</a>
