--- a/finalProject.html
+++ b/finalProject.html
@@ -110,11 +110,11 @@
             <div class="footer">
                 <div class="footer__licencia">
                     <p>Licencia:</p>
-                    <img src="img/licencia.png" alt="">
+                    <img src="img/licencia.jpg" alt="">
                 </div>
                 <div class="footer__copy">
                     <img src="img/fablab.png" alt="">
-                    <p>&copy; 2018 - Diseñado por: <a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe</a></p>
                 </div>
             </div>
         </footer>
