--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -26,8 +26,8 @@
                     <li><a href="practica2.html">2. Taller de design thinking</a></li>
                     <li><a href="practica3.html">3. Empatizar</a></li>
                     <li><a href="practica4.html">4. Definir</a></li>
-                    <li><a href="practica5.html">5. Idear</a></li>
-                    <li><a href="practica6.html">6. Prototipo y testeo</a></li>
+                    <li><a href="practica5.html">5. Prototipar</a></li>
+                    <li><a href="practica6.html">6. Testear</a></li>
                 </ul>
              </li>
             <li><a href="../finalProject.html">Proyecto de Fabricación Digital</a>
@@ -117,7 +117,7 @@
             <div class="footer">
                 <div class="footer__licencia">
                     <p>Licencia:</p>
-                    <img src="../img/licencia.png" alt="">
+                    <img src="../img/licencia.jpg" alt="">
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
