--- a/en/design-thinking/practica4.html
+++ b/en/design-thinking/practica4.html
@@ -22,12 +22,12 @@
 			<li><a href="../index.html">Home</a></li>
             <li><a href="../design.html">Design Thinking</a>
 				<ul>
-                     <li><a href="practica1.html">1. Approach of the design thinking project</a></li>
+                    <li><a href="practica1.html">1. Approach of the design thinking project</a></li>
                     <li><a href="practica2.html">2. Design thinking workshop</a></li>
                     <li><a href="practica3.html">3. Empathize</a></li>
                     <li><a href="practica4.html">4. Define</a></li>
-                    <li><a href="practica5.html">5. Idear</a></li>
-                    <li><a href="practica6.html">6. Prototype and testing</a></li>
+                    <li><a href="practica5.html">5. Prototype</a></li>
+                    <li><a href="practica6.html">6. Testing</a></li>
                 </ul>
              </li>
             <li><a href="../finalProject.html">Digital Manufacturing Project</a>
