--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>GRJ.SAC</title>
+    <title>RONADOMI 0.1</title>
 </head>
 <body>
     <div id="top">
@@ -26,8 +26,8 @@
                     <li><a href="design-thinking/practica2.html">2. Taller de design thinking</a></li>
                     <li><a href="design-thinking/practica3.html">3. Empatizar</a></li>
                     <li><a href="design-thinking/practica4.html">4. Definir</a></li>
-                    <li><a href="design-thinking/practica5.html">5. Idear</a></li>
-                    <li><a href="design-thinking/practica6.html">6. Prototipo y testeo</a></li>
+                    <li><a href="design-thinking/practica5.html">5. Prototipar</a></li>
+                    <li><a href="design-thinking/practica6.html">6. Testar</a></li>
                 </ul>
              </li>
             <li><a href="finalProject.html">Proyecto de Fabricación Digital</a>
@@ -106,6 +106,7 @@
                     <a href=mailto:"doris.zegarra @tecsup.edu.pe " class="team__item__description__mail"><p> E-mail: doris.zegarra @tecsup.edu.pe </P></a>
                     <p class="team__item__description__info">Descripción: Soy actualmente estudiante de Operación de Planta y Procesamiento de Minerales en Tecsup , soy una persona capaz de trabajar en equipo de manera eficaz , soy responsable y comprometida con el trabajo ,me gusta mucho investigar sobre temas nuevos o inndagar más sobre los conocidos  ,soluciono problemas fácilmente y me  adaptó a cualquier situación.Comprendo, escribo y hablo a nivel básico de Inglés.
                     </p> 
+                    <p class="team__item__description__cal">Calificación: <strong>0%</strong></p>
                 </div>
             </div>
             <div class="team__item">
@@ -160,7 +161,7 @@
         <div class="footer">
             <div class="footer__licencia">
                 <p>Licencia:</p>
-                <img src="img/licencia.png" alt="">
+                <img src="img/licencia.jpg" alt="">
             </div>
             <div class="footer__copy">
                 <img src="img/fablab.png" alt="">
