--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -97,13 +97,13 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2018 - Diseñado por: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe.</a></p>
                 </div>
             </div>
         </footer>
     <script src="../js/script.js"></script>
-	<script>
-		edgrid.menu('main-nav','main-menu');
-	</script>
+    <script>
+        edgrid.menu('main-nav','main-menu');
+    </script>
 </body>
 </html>
