--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe.</a></p>
                 </div>
             </div>
         </footer>
