--- a/proyecto-final/semana6.html
+++ b/proyecto-final/semana6.html
@@ -53,7 +53,7 @@
             </div> -->
         </div>
 
-        <!--div class="think">
+        <--div class="think">
             <div class="think__img">
                 <img src="../img/final.jpg" alt="">
             </div>
@@ -88,13 +88,13 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2018 - Diseñado por: <a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe.</a></p>
                 </div>
             </div>
         </footer>
     <script src="../js/script.js"></script>
-	<script>
-		edgrid.menu('main-nav','main-menu');
-	</script>
+    <script>
+        edgrid.menu('main-nav','main-menu');
+    </script>
 </body>
 </html>
