--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -43,7 +43,7 @@
 		</ul>
 	</nav>
 
-    <--div id="think">
+    
         <div class="think__title">
             <div class="think__title__text">
                 <h1>DEFINIR</h1>
@@ -74,6 +74,10 @@
                         <p>Hoy en día la tecnología permite a un competidor del mismo  producto  y a un consumidor comprarlo en cualquier lugar del mundo. Actualmente, también aparecen nuevos competidores que no siempre provienen de la misma industria y ofrecen soluciones para los clientes de manera más rápida. Pero nosotros nos enfocamos en nuestro país ya que no tiene alto impacto esta nueva tecnología.</div>
 
                 </div>
+                <div class="think__details__extra">
+                    <p class="think__details__extra__title">Insight del Usuario</p>
+                    
+                <img src="../img/IN.jpg" alt="">
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas</p>
