--- a/en/design-thinking/practica4.html
+++ b/en/design-thinking/practica4.html
@@ -75,6 +75,9 @@
                       <p>4. The amount of information we have available about our clients today
                       <p>Nowadays technology allows a competitor of the same product and a consumer to buy it anywhere in the world. Currently, new competitors also appear that do not always come from the same industry and offer solutions for customers more quickly. But we focus on our country since this new technology does not have a high impact.</div>
                 </div>
+                 <div class="think__details__extra">
+                    <p class="think__details__extra__title">Insight del Usuario</p>
+                    <img src="../../img/IN.jpg" alt="">
 
                   <div class="think__details__extra">
                     <p class="think__details__extra__title">Answers</p>
@@ -89,7 +92,7 @@
             <div class="footer">
                 <div class="footer__licencia">
                     <p>Licencia:</p>
-                    <img src="../../img/licencia.png" alt="">
+                    <img src="../../img/licencia.jpg" alt="">
                 </div>
                 <div class="footer__copy">
                     <img src="../../img/fablab.png" alt="">
