--- a/en/final-project/semana2.html
+++ b/en/final-project/semana2.html
@@ -69,6 +69,7 @@
                     <p class="think__details__info__title">  We publish the proposal on the website: </p>
                     <div class="think__details__extra">                    
                     <p class="think__details__info__title">a.   We describe the design where the project is flexible to changes using parametric (Video published on YouTube or Vmeo).</p>
+                    <img src="../../img/parametricos.jpeg" alt="">
                    
                     <p class="think__details__info__title">b.    We publish the links to download the generated files (the 2D / 3D design and the report in word)</p>
                     <div class="think__details__extra">
