--- a/en/final-project/semana4.html
+++ b/en/final-project/semana4.html
@@ -22,7 +22,7 @@
 			<li><a href="../index.html">Home</a></li>
             <li><a href="../design.html">Design Thinking</a>
 				<ul>
-                     <li><a href="../design-thinking/practica1.html">1. Approach of the design thinking project</a></li>
+                    <li><a href="../design-thinking/practica1.html">1. Approach of the design thinking project</a></li>
                     <li><a href="../design-thinking/practica2.html">2. Design thinking workshop</a></li>
                     <li><a href="../design-thinking/practica3.html">3. Empathize</a></li>
                     <li><a href="../design-thinking/practica4.html">4. Define</a></li>
@@ -46,7 +46,7 @@
      <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>PRESENTATION PART 1</h1>
+                <h1>Product Manual</h1>
             </div>
             <!-- <div class="think__title__content">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
@@ -64,7 +64,13 @@
         
             <div class="think__title__content">
                 <p>Presentation and description of the final work to 100% assembled and finished. Video material presenting the digital manufacturing process. Proposal with the final presentation including a design in the packaging, product logo or a guide to the client.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3M3CjZIwZzk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
+        <div id="think">
+        
+            </div> <div class="think__title__content">
+               <div class="think__details__extra__description"><a href="https://drive.google.com/open?id=1MvIfSbQwQzrx0fAUYEFDo_yCqCJ9ZcVJ">Diseño de la caja</a></div>
+               <div id="think">
                 </div>
                 <img src="../../img/mol1.jpeg" alt="">
                 <img src="../../img/manuin1.jpg" alt="">
