--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -67,12 +67,17 @@
                      <p class="think__details__extra__description">EL presente archivo muestra el modelo 1 (Rhinoceros).</p>
                     <a href="https://drive.google.com/open?id=1VrwlRcM1haTCPEw_PvBwIGkZZ5V08-W5" target="_blank">Hacer click para ver la rúbrica.</a>
                 </div>
-                <div class="think__details__info">
-                    <p class="think__details__info__title">  Publicamos la propuesta en la página web: </p>
-                    <div class="think__details__extra">                    
-                    <p class="think__details__info__title">a.   Describimos el diseño donde el proyecto es flexible a los cambios utilizando paramétricos (Video publicado en Youtube o Vmeo).</p>
+             <div class="think__details__info">
+              </div>
+            
+                 </div><div class="think__details__extra">                    
+                         <p class="think__details__info__title">a.   Describimos el diseño donde el proyecto es flexible a los cambios utilizando paramétricos (Video publicado en Youtube o Vmeo).</p>
+                          <img src="../img/parametricos.jpeg" alt="">
                    
-                    <p class="think__details__info__title">b.    Publicamos los enlaces para descargar los archivos generados (el diseño 2D /3D y el informe en word)</p>
+                            <p class="think__details__info__title">b.    Publicamos los enlaces para descargar los archivos generados (el diseño 2D /3D y el informe en word)</p>
+
+                        </div>
+
                     <div class="think__details__extra">
                     <p class="think__details__extra__title">Enlaces para descargar los archivos</p>
                     <p class="think__details__extra__description">EL presente archivo muestra el informe sobre los posibles modelos.</p>
@@ -93,7 +98,7 @@
             <div class="footer">
                 <div class="footer__licencia">
                     <p>Licencia:</p>
-                    <img src="../img/licencia.png" alt="">
+                    <img src="../img/licencia.jpg" alt="">
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
