--- a/en/final-project/semana5.html
+++ b/en/final-project/semana5.html
@@ -22,21 +22,22 @@
 			<li><a href="../index.html">Home</a></li>
             <li><a href="../design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="../design-thinking/practica1.html">Practice 1</a></li>
-                    <li><a href="../design-thinking/practica2.html">Practice 2</a></li>
-                    <li><a href="../design-thinking/practica3.html">Practice 3</a></li>
-                    <li><a href="../design-thinking/practica4.html">Practice 4</a></li>
-                    <li><a href="../design-thinking/practica5.html">Practice 5</a></li>
+                    <li><a href="../design-thinking/practica1.html">1. Approach of the design thinking project</a></li>
+                    <li><a href="../design-thinking/practica2.html">2. Design thinking workshop</a></li>
+                    <li><a href="../design-thinking/practica3.html">3. Empathize</a></li>
+                    <li><a href="../design-thinking/practica4.html">4. Define</a></li>
+                    <li><a href="../design-thinking/practica5.html">4. Devise</a></li>
+                    <li><a href="../design-thinking/practica5.html">6. Prototype and testing</a></li>
                 </ul>
              </li>
-            <li><a href="../finalProject.html">Final Project</a>
+            <li><a href="../finalProject.html">Digital Manufacturing Project</a>
                 <ul>
-                    <li><a href="semana1.html">Week 1</a></li>
-                    <li><a href="semana2.html">Week 2</a></li>
-                    <li><a href="semana3.html">Week 3</a></li>
-                    <li><a href="semana4.html">Week 4</a></li>
-                    <li><a href="semana5.html">Week 5</a></li>
-                    <li><a href="semana6.html">Week 6</a></li>
+                    <li><a href="semana1.html">1. Project management.</a></li>
+                    <li><a href="semana2.html">2. Development of 2D and / or 3D plans.</a></li>
+                    <li><a href="semana3.html">3. Execution of the final project.</a></li>
+                    <li><a href="semana4.html">4. Presentation of the preliminary project.</a></li>
+                    <li><a href="semana5.html">5. Development of the final presentation to the public.</a></li>
+                    <li><a href="semana6.html">6. Preparation of Speech.</a></li>
                 </ul>
             </li>
 		</ul>
@@ -45,16 +46,16 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Week 5</h1>
+                <h1>FINAL PRESENTATION</h1>
             </div>
-            <!-- <div class="think__title__content">
+            <div class="think__title__content">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
-            </div> -->
+            </div>
         </div>
 
         <div class="think">
             <div class="think__img">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/vf3TX0GTUzM?rel=0" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/shSqF9gPzOI?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
