--- a/en/index.html
+++ b/en/index.html
@@ -154,7 +154,7 @@
         <div class="footer">
             <div class="footer__licencia">
                 <p>License:</p>
-                <img src="../img/licencia.png" alt="">
+                <img src="../img/licencia.jpg" alt="">
             </div>
             <div class="footer__copy">
                 <img src="../img/fablab.png" alt="">
